--- a/assets/main.css
+++ b/assets/main.css
@@ -1,49 +1,50 @@
 @font-face {
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 400;
-    font-display: swap;
-    src: url('/fonts/Poppins-Regular.ttf') format('truetype');
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url('/fonts/Poppins-Regular.ttf') format('truetype');
 }
 
 @font-face {
-    font-family: 'Outfit';
-    font-style: normal;
-    font-weight: 400;
-    font-display: swap;
-    src: url('/fonts/Outfit.ttf') format('truetype');
+  font-family: 'Outfit';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url('/fonts/Outfit.ttf') format('truetype');
 }
 
 @font-face {
-    font-family: 'DM sans';
-    font-style: normal;
-    font-weight: 400;
-    font-display: swap;
-    src: url('/fonts/DMSans.ttf') format('truetype');
+  font-family: 'DM sans';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url('/fonts/DMSans.ttf') format('truetype');
 }
 
-html, body {
-    width: 100%;
-    height: 100%;
+html,
+body {
+  width: 100%;
+  height: 100%;
 
-    color: var(--font-color);
-    font-family: 'Poppins', sans-serif;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
+  color: var(--font-color);
+  font-family: 'Poppins', sans-serif;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
 }
 
 p {
-    margin: 0;
+  margin: 0;
 }
 
 :root {
-    --gray-lightest-2: #F7F9FC;
-    --gray-lightest: #E2E6EE;
-    --gray-1: #202020;
+  --gray-lightest-2: #f7f9fc;
+  --gray-lightest: #e2e6ee;
+  --gray-1: #202020;
 
-    --background-color: var(--gray-lightest-2);
-    --font-color: var(--gray-1);
-    --divider-color: var(--gray-lightest);
+  --background-color: var(--gray-lightest-2);
+  --font-color: var(--gray-1);
+  --divider-color: var(--gray-lightest);
 }
